<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_new_character"
            android:icon="@drawable/ic_menu_new_character"
            android:title="@string/menu_new_character" />
        <item
            android:id="@+id/nav_list_characters"
            android:icon="@drawable/ic_menu_list_characters"
            android:title="@string/menu_list_characters" />
    </group>

    <item android:title="@string/menu_tools">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_manage"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/menu_settings" />
        </menu>
    </item>

</menu>
